# qt-cmake

./: CMakeLists.txt  README.md  mainwindow.ui
src/helloworld/: CMakeLists.txt
src/helloworld/src/: mainwindow.cpp
